Fix T91691: Selecting "Remove unused slots" in Materials panel removes slots that are assigned to particle systems/hair.

`BKE_object_material_slot_used` would only check obdata usages, but
particle settings can also (weirdly enough) use objects' material slots.

So now, as its name suggests, `BKE_object_material_slot_used` does take
an object as parameter, and also checks for potential slot usage from
psys in the object.